--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ h2 {
   color: #1f2937;
 }
 
+h3 {
+  font-size: 24px;
+}
+
 p {
   color: #e5e7eb;
   font-size: 18px;
@@ -44,6 +48,26 @@ p {
   font-weight: 500;
 }
 
+.button-light {
+  width: 130px;
+  margin-top: 10px;
+  border-radius: 10px;
+  padding: 8px;
+  background-color: #3882f6;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  border: 2px solid #f9faf8;
+}
+
+.bg-color-100 {
+  background-color: #e5e7eb;
+}
+
+.bg-color-200 {
+  background-color: #1f2937;
+}
+
 /* Content CSS begins here */
 
 body {
@@ -51,18 +75,11 @@ body {
   flex-direction: column;
 }
 
-header {
-  background-color: #1f2937;
-  color: #ffffff;
-}
-
 .header-container {
   width: 1040px;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
-  background-color: #1f2937;
-  color: #ffffff;
   padding-top: 18px;
 }
 
@@ -81,8 +98,6 @@ header {
 .hero-container {
   width: 1040px;
   margin: 120px auto;
-  background: #1f2937;
-  color: #ffffff;
   justify-content: space-between;
 }
 
@@ -92,8 +107,9 @@ header {
 }
 
 .hero-content h2 {
-  color: #ffffff;
+  color: #f9faf8;
   font-size: 48px;
+  font-weight: 900;
 }
 
 .hero-image {
@@ -101,4 +117,78 @@ header {
   width: 530px;
   height: 230px;
   text-align: center;
+}
+
+.random-info-content {
+  width: 900px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 60px;
+}
+
+.random-info-content h2 {
+  font-size: 37px;
+  font-weight: 800;
+}
+
+.info-card-container {
+  justify-content: center;
+  gap: 50px;
+  margin: 40px 0 100px 0;
+}
+
+.info-card {
+  width: 170px;
+  color: #4d4d4d;
+  text-align: center;
+}
+
+.card-img {
+  width: 170px;
+  height: 170px;
+  border: 4px solid #3882f6;
+  margin: 0 0 10px 0;
+  border-radius: 15px;
+}
+
+.testimonial-content {
+  width: 910px;
+  margin: 0 auto;
+  padding: 100px 60px;
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1f2937;
+}
+
+.testimonial-content span {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.cta-container {
+  width: 1040px;
+  height: 150px;
+  margin: 100px auto;
+  background-color: #3882f6;
+  color: #f9faf8;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  gap: 25px;
+  
+}
+
+.cta-content {
+  width: 600px;
+}
+
+footer {
+  background-color: #1f2937;
+  display: flex;
+  color: #e0e0e0;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
